Added a footer with styling

--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,16 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/controllers.js"></script>
   <script src="scripts/directives/directives.js"></script>
-  <link href="styles/bootstrap.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
   
   <div ng-view></div>
 
+  <div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">KissMyApps</div>
+  </div>
+  
 </body>
 </html>
