--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-resource.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-animate.js"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/controllers.js"></script>
   <script src="scripts/directives/directives.js"></script>
@@ -16,9 +17,9 @@
   
   <div ng-view></div>
 
-  <div class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">KissMyApps</div>
-  </div>
-  
+  <footer class="navbar navbar-inverse navbar-fixed-bottom">
+    <div class="text-center"><b>KissMyApps &#0169 2014</b></div>
+  </footer>
+
 </body>
 </html>
